[package]
name = "rust-playground"
version = "0.1.0"
authors = ["cosmoslx <cosmoslx@gmail.com>"]
edition = "2021"

[lib]
path ="./src/lib/lib.rs"

[dependencies]
futures = "0.3"
mini-redis = "0.4"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dependencies.tokio]
version = "1.19"
features = ["full"]

[dev-dependencies]
pretty_assertions = "1.2"
bytes = "1.1"